style.css
@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto&display=swap");

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: inherit;
}


#left-character {
  animation: move-left-character 5s forwards ease-in-out;
  animation-iteration-count: 1;
}

@keyframes move-left-character {
  from {
      transform: translate(15px, 0px);
  }
  to {
      transform: translate(50px, 0px);
  }
}

#left-triangle {
  animation-name: moveLeftTriangle;
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out ;
  animation-duration: 5s;
  animation-iteration-count: 1;
}

@keyframes moveLeftTriangle {
  to {
      transform: translate(35px, 0px);
  }

}

#right-triangle {
  transform-origin: 362.16px 104.982px;
  animation: rotate-right-triangle 5s forwards ease-in-out;
  animation-iteration-count: 1;
}

@keyframes rotate-right-triangle {
  to {
      transform: rotate(-9deg);
  }
}

#right-character {
  transform: translate(-20px, 0px);
}

@media (max-width: 768px) {
    #logo {
        flex-shrink: 0;
        transform: scale(0.75) translate(-20px, 0px);
    }

}

